--- a/IT-Inventory/Views/Home/Index.cshtml
+++ b/IT-Inventory/Views/Home/Index.cshtml
@@ -8,19 +8,17 @@
     @Html.ActionLink("Всё оборудование", "Index", "Items", null, new { @class = "btn btn-primary" })
     @Html.ActionLink("Всe принтеры", "Index", "Printers", null, new { @class = "btn btn-primary" })
     @Html.ActionLink("Вся история", "Index", "Histories", null, new { @class = "btn btn-primary" })
-    @Html.ActionLink("Выдачи за 30 дней", "Grant", "Histories", new { days = 30 }, new { @class = "btn btn-primary" })
+    @Html.ActionLink("Расход за 30 дней", "Grant", "Histories", new { days = 30 }, new { @class = "btn btn-primary" })
     @Html.ActionLink("Приход за 30 дней", "Recieve", "Histories", new { days = 30 }, new { @class = "btn btn-primary" })
 </div>
 
 <div class="row">
     <div class="col-md-4">
-        <h2>Оборудование</h2>
+        <h2>Склад</h2>
         @foreach (var type in StaticData.GetTypes())
         {
             <p>@Html.ActionLink(type.Name, "Index", "Items", new { id = type.Id }, null)</p>
         }
-        <p>@Html.ActionLink("История выдачи", "Grant", "Histories")</p>
-        <p>@Html.ActionLink("История прихода", "Recieve", "Histories")</p>
     </div>
     <div class="col-md-4">
         <h2>Принтеры</h2>
@@ -28,6 +26,7 @@
         {
             <p>@Html.ActionLink(office.Name, "Index", "Printers", new { officeId = office.Id }, null)</p>
         }
+        <p>@Html.ActionLink("Картриджи", "Index", "Items", new {id = 11}, null)</p>
     </div>
     <div class="col-md-4">
         <h2>Справочники</h2>
@@ -36,5 +35,8 @@
         <p>@Html.ActionLink("Сотрудники (обновить)", "Index", "People")</p>
         <p>@Html.ActionLink("Характеристики оборудования", "Index", "ItemAttributes")</p>
         <p>@Html.ActionLink("Типы оборудования", "Index", "ItemTypes")</p>
+        <h2>История</h2>
+        <p>@Html.ActionLink("Расход", "Grant", "Histories")</p>
+        <p>@Html.ActionLink("Приход", "Recieve", "Histories")</p>
     </div>
 </div>
