--- a/IT-Inventory/Views/Shared/_Layout.cshtml
+++ b/IT-Inventory/Views/Shared/_Layout.cshtml
@@ -25,7 +25,7 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Оборудование", "Index", "Items", null, new {@href = "/Items/Index"})</li>
+                    <li>@Html.ActionLink("Склад", "Index", "Items", null, new {@href = "/Items/Index"})</li>
                     <li>@Html.ActionLink("Принтеры", "Index", "Printers", null, new { @href = "/Printers/Index" })</li>
                     <li>@Html.ActionLink("История", "Index", "Histories", null, new { @href = "/Histories/Index" })</li>
 
