--- a/IT-Inventory/Views/Items/Create.cshtml
+++ b/IT-Inventory/Views/Items/Create.cshtml
@@ -33,6 +33,15 @@
             </div>
         </div>
 
+        <div class="form-group">
+            @Html.LabelFor(model => model.MinQuantity, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.MinQuantity, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.MinQuantity, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+
         @for (var i = 0; i < Model.AttributeValues.Count; i++)
         {
             <div class="form-group">
