--- a/IT-Inventory/Views/Items/Index.cshtml
+++ b/IT-Inventory/Views/Items/Index.cshtml
@@ -25,7 +25,7 @@
         </tr>
         @foreach (var item in Model)
         {
-        <tr style="@(item.Quantity == 0 ? "color:red" : "")">
+        <tr style="@(item.Quantity <= item.MinQuantity ? "color:red" : "")">
         <td>
                     @Html.DisplayFor(modelItem => item.ItemType.Name)
                 </td>
@@ -35,7 +35,7 @@
         <td>
                     @Html.DisplayFor(modelItem => item.Quantity)
                 </td>
-        <td>
+        <td style="color:black">
                     @Html.ActionLink("Выдать", "Grant", new { id = item.Id }) |
                     @Html.ActionLink("Принять", "Recieve", new { id = item.Id }) |
                     @Html.ActionLink("История", "Index", "Histories", new { id = item.Id }, null) |
