--- a/IT-Inventory/Views/Items/Create.cshtml
+++ b/IT-Inventory/Views/Items/Create.cshtml
@@ -16,7 +16,7 @@
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.ItemTypeId)
-
+        @Html.HiddenFor(model => model.ItemTypeName)
         <div class="form-group">
             @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
@@ -46,6 +46,8 @@
         {
             <div class="form-group">
                 @Html.HiddenFor(model => model.AttributeValues[i].Id)
+                @Html.HiddenFor(model => model.AttributeValues[i].Name)
+                @Html.HiddenFor(model => model.AttributeValues[i].IsNumber)
                 @Html.HiddenFor(model => model.AttributeValues[i].AttributeId)
                 @Html.Label(Model.AttributeValues[i].Name, htmlAttributes: new {@class = "control-label col-md-2"})
                 <div class="col-md-10">
