--- a/IT-Inventory/Views/Printers/Index.cshtml
+++ b/IT-Inventory/Views/Printers/Index.cshtml
@@ -37,9 +37,6 @@
             @Html.DisplayNameFor(model => model.Name)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Ip)
-        </th>
-        <th>
             @Html.DisplayNameFor(model => model.Department)
         </th>
         <th>
@@ -58,9 +55,6 @@
             @Html.DisplayFor(modelItem => item.Name)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.Ip)
-        </td>
-        <td>
             @Html.DisplayFor(modelItem => item.Department.Name)
         </td>
         <td>
@@ -71,15 +65,11 @@
                 <tr>
                     @foreach (var cartridge in item.Cartridges.Where(c => c.AttributeValues.FirstOrDefault(a => a.Attribute.Id == 2) != null).OrderBy(c => c.AttributeValues.FirstOrDefault(a => a.Attribute.Id == 2).Value))
                     {
-                        @*<font color=@cartridge.AttributeValues.FirstOrDefault(a => a.Attribute.Id == 2).Value>&nbsp; &#11044 &nbsp;</font>
-                        <font size="4">@Html.ActionLink(cartridge.Quantity.ToString(), "Grant", "Items", new { id = cartridge.Id }, new { style = cartridge.Quantity <= cartridge.MinQuantity ? "color:red" : "" })</font>*@
-
-
-                        <td>
-                            <font color=@cartridge.AttributeValues.FirstOrDefault(a => a.Attribute.Id == 2).Value>&#11044</font>
-                        </td>
-                        <td>
-                            &nbsp;&nbsp;<font size="4">@Html.ActionLink(cartridge.Quantity.ToString(), "Grant", "Items", new {id = cartridge.Id}, new { style = cartridge.Quantity <= cartridge.MinQuantity ? "color:red" : ""})</font>&nbsp;&nbsp;
+                        <td align="center">
+                            &nbsp;<font color=@cartridge.AttributeValues.FirstOrDefault(a => a.Attribute.Id == 2).Value>&#11044</font>&nbsp;<br/>
+                        @*</td>
+                        <td>*@
+                            <font size="4">@Html.ActionLink(cartridge.Quantity.ToString(), "Grant", "Items", new {id = cartridge.Id}, new { style = cartridge.Quantity <= cartridge.MinQuantity ? "color:red" : ""})</font>
                         </td>
                     }
                 </tr>
@@ -87,7 +77,7 @@
         </td>
         <td style="color:black">
             @Html.ActionLink("Редактировать", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Подробно", "Details", new {id = item.Id}) |
+            @Html.ActionLink("Подробно", "Details", new {id = item.Id}) <br/>
             @if (!string.IsNullOrEmpty(item.Ip))
             {
                 @Html.ActionLink("Управлять", "Manage", new { ip = item.Ip } , new { target = "_blank" })@: |
