--- a/IT-Inventory/Views/Shared/_Layout.cshtml
+++ b/IT-Inventory/Views/Shared/_Layout.cshtml
@@ -1,5 +1,4 @@
-﻿@using IT_Inventory.ViewModels
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
@@ -25,12 +24,12 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Склад", "Index", "Items", null, new {@href = "/Items/Index"})</li>
+                    <li>@Html.ActionLink("Склад", "Index", "Items", null, new { @href = "/Items/Index" })</li>
                     <li>@Html.ActionLink("Принтеры", "Index", "Printers", null, new { @href = "/Printers/Index" })</li>
                     <li>@Html.ActionLink("История", "Index", "Histories", null, new { @href = "/Histories/Index" })</li>
-
+                    <li>@Html.ActionLink("Сотрудники", "Index", "People", null, new { @href = "/People/Index" })</li>
                 </ul>
-                <p class="nav navbar-text navbar-right">Здравствуйте, @StaticData.GetUserName(User.Identity.Name)!</p>
+                <p class="nav navbar-text navbar-right">Здравствуйте, @User.Identity.Name.GetUserName()!</p>
             </div>
         </div>
     </div>
