--- a/IT-Inventory/Views/Items/Create.cshtml
+++ b/IT-Inventory/Views/Items/Create.cshtml
@@ -25,11 +25,14 @@
             </div>
         </div>
 
+        @if (Model.ItemTypeId != 8)
+        {
+
         <div class="form-group">
-            @Html.LabelFor(model => model.Quantity, htmlAttributes: new {@class = "control-label col-md-2"})
+            @Html.LabelFor(model => model.Quantity, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Quantity, new {htmlAttributes = new {@class = "form-control"}})
-                @Html.ValidationMessageFor(model => model.Quantity, "", new {@class = "text-danger"})
+                @Html.EditorFor(model => model.Quantity, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Quantity, "", new { @class = "text-danger" })
             </div>
         </div>
 
@@ -41,6 +44,7 @@
             </div>
         </div>
 
+        }
 
         @for (var i = 0; i < Model.AttributeValues.Count; i++)
         {
