--- a/IT-Inventory/Views/Items/Index.cshtml
+++ b/IT-Inventory/Views/Items/Index.cshtml
@@ -36,7 +36,10 @@
                 @Html.DisplayFor(modelItem => item.Quantity)
             </td>
             <td style="color: black">
-                @Html.ActionLink("Выдать", "Grant", new {id = item.Id}) |
+                @if (item.Quantity > 0)
+                {
+                    @Html.ActionLink("Выдать", "Grant", new { id = item.Id }) @: |
+                }
                 @Html.ActionLink("Принять", "Recieve", new {id = item.Id}) |
                 @Html.ActionLink("История", "Index", "Histories", new {id = item.Id}, null) |
                 @Html.ActionLink("Редактировать", "Edit", new {id = item.Id}) |
@@ -54,10 +57,10 @@
         @if (Model.Pager.CurrentPage > 1)
         {
             <li>
-                @Html.ActionLink("Первая", "Index", new { page = 1 })
+                @Html.ActionLink("Первая", "Index", new { page = 1, urgent = Model.IsUrgent })
             </li>
             <li>
-                @Html.ActionLink("Предыдущая", "Index", new { page = Model.Pager.CurrentPage - 1 })
+                @Html.ActionLink("Предыдущая", "Index", new { page = Model.Pager.CurrentPage - 1, urgent = Model.IsUrgent })
             </li>
         }
 
@@ -71,10 +74,10 @@
         @if (Model.Pager.CurrentPage < Model.Pager.TotalPages)
         {
             <li>
-                @Html.ActionLink("Следующая", "Index", new { page = Model.Pager.CurrentPage + 1 })
+                @Html.ActionLink("Следующая", "Index", new { page = Model.Pager.CurrentPage + 1, urgent = Model.IsUrgent })
             </li>
             <li>
-                @Html.ActionLink("Последняя", "Index", new { page = Model.Pager.TotalPages })
+                @Html.ActionLink("Последняя", "Index", new { page = Model.Pager.TotalPages, urgent = Model.IsUrgent })
             </li>
         }
     </ul>
